Improved ColorPalette so it shows colors and brush names. Fix MoneyColorConverter to used themed colors. Add Light/Dark colors for PositiveCurrencyForegroundBrush and NegativeCurrencyForegroundBrush so dark theme can be less bright. Color DataGrid colors in AliasesView, SecurituesView and CurrenciesView. Fix colors in Splits DataGrid and Securities StockSplits grid.

--- a/Source/WPF/MyMoney/Controls/ColorPalette.xaml
+++ b/Source/WPF/MyMoney/Controls/ColorPalette.xaml
@@ -8,364 +8,21 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
         <Style TargetType="TextBlock">
-            <Setter Property="Foreground" Value="{DynamicResource DynamicResourceSystemControlForegroundBaseLowBrush}"/>
+            <Setter Property="Foreground" Value="{DynamicResource SystemControlForegroundBaseLowBrush}"/>
             <Setter Property="Margin" Value="10,0,0,0"/>
         </Style>
         <Style TargetType="Rectangle">
             <Setter Property="Width" Value="20"/>
             <Setter Property="Height" Value="20"/>
         </Style>
+        <DataTemplate x:Key="ListViewColorTemplate" DataType="local:ColorItem">
+            <StackPanel Orientation="Horizontal">
+                <Rectangle Fill="{Binding Brush}" Width="20" Height="20"/>
+                <TextBlock Text="{Binding Name}" Margin="10,0,0,0"/>
+            </StackPanel>
+        </DataTemplate>
     </UserControl.Resources>
-    <ListView Background="{DynamicResource SystemControlPageBackgroundChromeLowBrush}">
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource SystemAccentColorDark1Brush}"/>
-                <TextBlock Text="Color {m:DynamicColor SystemAccentColorDark1}, Brush=SystemAccentColorDark1Brush" />
-            </StackPanel>
-        </ListViewItem>
-
-
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource SystemAccentColorDark2Brush}"/>
-                <TextBlock Text="Color {m:DynamicColor SystemAccentColorDark2}, Brush=SystemAccentColorDark2Brush" />
-            </StackPanel>
-        </ListViewItem>
-
-
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource SystemAccentColorDark3Brush}"/>
-                <TextBlock Text="Color {m:DynamicColor SystemAccentColorDark3}, Brush=SystemAccentColorDark3Brush" />
-            </StackPanel>
-        </ListViewItem>
-
-
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource SystemAccentColorLight1Brush}"/>
-                <TextBlock Text="Color {m:DynamicColor SystemAccentColorLight1}, Brush=SystemAccentColorLight1Brush" />
-            </StackPanel>
-        </ListViewItem>
-
-
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource SystemAccentColorLight2Brush}"/>
-                <TextBlock Text="Color {m:DynamicColor SystemAccentColorLight2}, Brush=SystemAccentColorLight2Brush" />
-            </StackPanel>
-        </ListViewItem>
-
-
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource SystemAccentColorLight3Brush}"/>
-                <TextBlock Text="Color {m:DynamicColor SystemAccentColorLight3}, Brush=SystemAccentColorLight3Brush" />
-            </StackPanel>
-        </ListViewItem>
-
-
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource SystemControlBackgroundAccentBrush}"/>
-                <TextBlock Text="Color {m:DynamicColor SystemAccentColor}, Brush=SystemControlBackgroundAccentBrush" />
-            </StackPanel>
-        </ListViewItem>
-
-
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource SystemControlBackgroundAltHighBrush}"/>
-                <TextBlock Text="Color {m:StaticColor SystemAltHighColor}, Brush=SystemControlBackgroundAltHighBrush" />
-            </StackPanel>
-        </ListViewItem>
-
-
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource SystemControlBackgroundAltMediumHighBrush}"/>
-                <TextBlock Text="Color {m:StaticColor SystemAltMediumHighColor}, Brush=SystemControlBackgroundAltMediumHighBrush" />
-            </StackPanel>
-        </ListViewItem>
-
-
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource SystemControlBackgroundAltMediumBrush}"/>
-                <TextBlock Text="Color {m:StaticColor SystemAltMediumColor}, Brush=SystemControlBackgroundAltMediumBrush" />
-            </StackPanel>
-        </ListViewItem>
-
-
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource SystemControlBackgroundAltMediumLowBrush}"/>
-                <TextBlock Text="Color {m:StaticColor SystemAltMediumLowColor}, Brush=SystemControlBackgroundAltMediumLowBrush" />
-            </StackPanel>
-        </ListViewItem>
-
-
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource SystemControlBackgroundBaseHighBrush}"/>
-                <TextBlock Text="Color {m:StaticColor SystemBaseHighColor}, Brush=SystemControlBackgroundBaseHighBrush" />
-            </StackPanel>
-        </ListViewItem>
-
-
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource SystemControlBackgroundBaseLowBrush}"/>
-                <TextBlock Text="Color {m:StaticColor SystemBaseLowColor}, Brush=SystemControlBackgroundBaseLowBrush" />
-            </StackPanel>
-        </ListViewItem>
-
-
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource SystemControlBackgroundBaseMediumBrush}"/>
-                <TextBlock Text="Color {m:StaticColor SystemBaseMediumColor}, Brush=SystemControlBackgroundBaseMediumBrush" />
-            </StackPanel>
-        </ListViewItem>
-
-
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource SystemControlBackgroundBaseMediumHighBrush}"/>
-                <TextBlock Text="Color {m:StaticColor SystemBaseMediumHighColor}, Brush=SystemControlBackgroundBaseMediumHighBrush" />
-            </StackPanel>
-        </ListViewItem>
-
-
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource SystemControlBackgroundBaseMediumLowBrush}"/>
-                <TextBlock Text="Color {m:StaticColor SystemBaseMediumLowColor}, Brush=SystemControlBackgroundBaseMediumLowBrush" />
-            </StackPanel>
-        </ListViewItem>
-
-
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource SystemControlBackgroundChromeBlackHighBrush}"/>
-                <TextBlock Text="Color {m:StaticColor SystemChromeBlackHighColor}, Brush=SystemControlBackgroundChromeBlackHighBrush" />
-            </StackPanel>
-        </ListViewItem>
-
-
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource SystemControlBackgroundChromeBlackMediumBrush}"/>
-                <TextBlock Text="Color {m:StaticColor SystemChromeBlackMediumColor}, Brush=SystemControlBackgroundChromeBlackMediumBrush" />
-            </StackPanel>
-        </ListViewItem>
-
-
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource SystemControlBackgroundChromeBlackLowBrush}"/>
-                <TextBlock Text="Color {m:StaticColor SystemChromeBlackLowColor}, Brush=SystemControlBackgroundChromeBlackLowBrush" />
-            </StackPanel>
-        </ListViewItem>
-
-
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource SystemControlBackgroundChromeBlackMediumLowBrush}"/>
-                <TextBlock Text="Color {m:StaticColor SystemChromeBlackMediumLowColor}, Brush=SystemControlBackgroundChromeBlackMediumLowBrush" />
-            </StackPanel>
-        </ListViewItem>
-
-
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource SystemControlBackgroundChromeMediumBrush}"/>
-                <TextBlock Text="Color {m:StaticColor SystemChromeMediumColor}, Brush=SystemControlBackgroundChromeMediumBrush" />
-            </StackPanel>
-        </ListViewItem>
-
-
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource SystemControlBackgroundChromeMediumLowBrush}"/>
-                <TextBlock Text="Color {m:StaticColor SystemChromeMediumLowColor}, Brush=SystemControlBackgroundChromeMediumLowBrush" />
-            </StackPanel>
-        </ListViewItem>
-
-
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource SystemControlBackgroundChromeWhiteBrush}"/>
-                <TextBlock Text="Color {m:StaticColor SystemChromeWhiteColor}, Brush=SystemControlBackgroundChromeWhiteBrush" />
-            </StackPanel>
-        </ListViewItem>
-
-
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource SystemControlBackgroundListLowBrush}"/>
-                <TextBlock Text="Color {m:StaticColor SystemListLowColor}, Brush=SystemControlBackgroundListLowBrush" />
-            </StackPanel>
-        </ListViewItem>
-
-
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource SystemControlBackgroundListMediumBrush}"/>
-                <TextBlock Text="Color {m:StaticColor SystemListMediumColor}, Brush=SystemControlBackgroundListMediumBrush" />
-            </StackPanel>
-        </ListViewItem>
-
-
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource SystemControlDisabledChromeDisabledHighBrush}"/>
-                <TextBlock Text="Color {m:StaticColor SystemChromeDisabledHighColor}, Brush=SystemControlDisabledChromeDisabledHighBrush" />
-            </StackPanel>
-        </ListViewItem>
-
-
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource SystemControlDisabledChromeDisabledLowBrush}"/>
-                <TextBlock Text="Color {m:StaticColor SystemChromeDisabledLowColor}, Brush=SystemControlDisabledChromeDisabledLowBrush" />
-            </StackPanel>
-        </ListViewItem>
-
-
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource SystemControlDisabledChromeHighBrush}"/>
-                <TextBlock Text="Color {m:StaticColor SystemChromeHighColor}, Brush=SystemControlDisabledChromeHighBrush" />
-            </StackPanel>
-        </ListViewItem>
-
-
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource SystemControlDisabledTransparentBrush}"/>
-                <TextBlock Text="Color Transparent, Brush=SystemControlDisabledTransparentBrush" />
-            </StackPanel>
-        </ListViewItem>
-
-
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource SystemControlForegroundChromeGrayBrush}"/>
-                <TextBlock Text="Color {m:StaticColor SystemChromeGrayColor}, Brush=SystemControlForegroundChromeGrayBrush" />
-            </StackPanel>
-        </ListViewItem>
-
-
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource SystemControlHighlightChromeAltLowBrush}"/>
-                <TextBlock Text="Color {m:StaticColor SystemChromeAltLowColor}, Brush=SystemControlHighlightChromeAltLowBrush" />
-            </StackPanel>
-        </ListViewItem>
-
-
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource SystemControlPageBackgroundChromeLowBrush}"/>
-                <TextBlock Text="Color {m:StaticColor SystemChromeLowColor}, Brush=SystemControlPageBackgroundChromeLowBrush" />
-            </StackPanel>
-        </ListViewItem>
-
-
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource SystemControlErrorTextForegroundBrush}"/>
-                <TextBlock Text="Color {m:StaticColor SystemErrorTextColor}, Brush=SystemControlErrorTextForegroundBrush" />
-            </StackPanel>
-        </ListViewItem>
-
-
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource SystemControlTransientBorderBrush}"/>
-                <TextBlock Text="Color #000000, Brush=SystemControlTransientBorderBrush" />
-            </StackPanel>
-        </ListViewItem>
-
-
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource AcrylicInAppFillColorDefaultBrush}"/>
-                <TextBlock Text="Color {StaticResource SystemChromeMediumLowColor}, Brush=AcrylicInAppFillColorDefaultBrush" />
-            </StackPanel>
-        </ListViewItem>
-
-
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource AcrylicBackgroundFillColorDefaultInverseBrush}"/>
-                <TextBlock Text="Color #F2F2F2, Brush=AcrylicBackgroundFillColorDefaultInverseBrush" />
-            </StackPanel>
-        </ListViewItem>
-
-
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource SystemControlDefaultBrighteningBrush}"/>
-                <TextBlock Text="Color #FFFFFF, Brush=SystemControlDefaultBrighteningBrush" />
-            </StackPanel>
-        </ListViewItem>
-
-
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource ApplicationPageBackgroundThemeBrush}"/>
-                <TextBlock Text="Color #FF000000, Brush=ApplicationPageBackgroundThemeBrush" />
-            </StackPanel>
-        </ListViewItem>
-
-
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource InvalidBrush}"/>
-                <TextBlock Text="Color #FFFF00, Brush=InvalidBrush" />
-            </StackPanel>
-        </ListViewItem>
-
-
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource SystemControlGridLinesBaseMediumLowBrush}"/>
-                <TextBlock Text="Color #FF666666, Brush=SystemControlGridLinesBaseMediumLowBrush" />
-            </StackPanel>
-        </ListViewItem>
-
-
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource ScrollBarThumbBackground}"/>
-                <TextBlock Text="Color {m:StaticResource ScrollBarThumbBackgroundColor}, Brush=ScrollBarThumbBackground" />
-            </StackPanel>
-        </ListViewItem>
-
-
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource ScrollBarPanningThumbBackground}"/>
-                <TextBlock Text="Color {m:StaticResource ScrollBarPanningThumbBackgroundColor}, Brush=ScrollBarPanningThumbBackground" />
-            </StackPanel>
-        </ListViewItem>
-
-
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource WindowBorder}"/>
-                <TextBlock Text="Color #FF707070, Brush=WindowBorder" />
-            </StackPanel>
-        </ListViewItem>
-
-
-        <ListViewItem>
-            <StackPanel Orientation="Horizontal">
-                <Rectangle Fill="{DynamicResource WindowBorderInactive}"/>
-                <TextBlock Text="Color #FF555555, Brush=WindowBorderInactive" />
-            </StackPanel>
-        </ListViewItem>
+    <ListView x:Name="PaletteList" Background="{DynamicResource SystemControlPageBackgroundChromeLowBrush}"
+              ItemTemplate="{StaticResource ListViewColorTemplate}">
     </ListView>
 </UserControl>
