--- a/Source/WPF/MyMoney/Themes/Dark.xaml
+++ b/Source/WPF/MyMoney/Themes/Dark.xaml
@@ -28,5 +28,8 @@
     <SolidColorBrush x:Key="GridAlternateBackgroundBrush" Color="#1e1e1e"/>
     <SolidColorBrush x:Key="GridLineBrush" Color="{m:StaticColor SystemChromeBlackLowColor}"/>
 
+    <!-- color in accounts and categories balance fields -->
+    <SolidColorBrush x:Key="PositiveCurrencyForegroundBrush" Color="#99FFFFFF"/>
+    <SolidColorBrush x:Key="NegativeCurrencyForegroundBrush" Color="Firebrick"/>
 
 </ResourceDictionary>
