--- a/Source/WPF/MyMoney/Dialogs/CreateDatabaseDialog.xaml
+++ b/Source/WPF/MyMoney/Dialogs/CreateDatabaseDialog.xaml
@@ -30,15 +30,15 @@
                 <TextBlock x:Name="LabelSqlitePrompt" Margin="0,10" Grid.ColumnSpan="4" TextWrapping="Wrap" Text="Please provide the full path of the SQL Lite file that you would like to create to store your money records:"/>
 
                 <TextBlock x:Name="TextBlockSqliteBackupPrompt" Text="Backup file:" Grid.Row="1" Margin="5,4" />
-                <TextBox x:Name="TextBoxSqliteBackup" Background="#80FFFFC0" Margin="2" TextChanged="TextBoxSqliteBackup_TextChanged" Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2"/>
+                <TextBox x:Name="TextBoxSqliteBackup" Margin="2" TextChanged="TextBoxSqliteBackup_TextChanged" Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2"/>
                 <Button x:Name="ButtonSqliteBrowseBackup" Grid.Column="3" MinWidth="31" Click="ButtonSqliteBrowseBackup_Click"  Grid.Row="1">...</Button>
 
                 <TextBlock Text="SQL Lite file:" Margin="5,2" Grid.Row="2" />
-                <TextBox Background="#80FFFFC0" x:Name="TextBoxSqliteDatabaseFile"  Grid.Row="2" Grid.Column="1" Margin="2" TextChanged="TextBoxSqliteDatabaseFile_TextChanged" Grid.ColumnSpan="2"/>
+                <TextBox x:Name="TextBoxSqliteDatabaseFile"  Grid.Row="2" Grid.Column="1" Margin="2" TextChanged="TextBoxSqliteDatabaseFile_TextChanged" Grid.ColumnSpan="2"/>
                 <Button x:Name="ButtonSqliteBrowse" Click="ButtonSqliteBrowse_Click" Grid.Column="3"  Grid.Row="2" MinWidth="31">...</Button>
 
                 <TextBlock Text="Password:" Margin="5,2" Grid.Row="3" />
-                <c:PasswordControl  Background="#80FFFFC0" x:Name="TextBoxSqlitePassword"  Grid.Row="3" Grid.Column="1" Margin="2" Grid.ColumnSpan="2"
+                <c:PasswordControl  x:Name="TextBoxSqlitePassword"  Grid.Row="3" Grid.Column="1" Margin="2" Grid.ColumnSpan="2"
                                             MinHeight="20"/>
 
             </Grid>
